[gd_scene load_steps=4 format=3 uid="uid://deybp8wd0qh0x"]

[ext_resource type="Script" uid="uid://c7hyafa8h3va" path="res://menus/main_menu.gd" id="1_8gy84"]
[ext_resource type="Texture2D" uid="uid://ci5s24q1vqwke" path="res://assets/fonds/Fondo.png" id="2_ij7vn"]
[ext_resource type="Texture2D" uid="uid://brmn5plic0f86" path="res://assets/fonds/logo.png" id="3_yjgyn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8gy84")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1611.0
offset_bottom = 887.0

[node name="user_label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 536.0
offset_top = 310.0
offset_right = 1104.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 535.0
offset_top = 434.0
offset_right = 1103.0
offset_bottom = 771.0
theme_override_constants/separation = 39

[node name="vs_cpu_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Jugar contra la máquina"

[node name="multiplayer_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Jugar en línea"

[node name="logout_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Cerrar sesión"

[node name="Fondo" type="Sprite2D" parent="Panel/VBoxContainer"]
show_behind_parent = true
position = Vector2(269.5, 8.50002)
scale = Vector2(1.04492, 0.866211)
texture = ExtResource("2_ij7vn")

[node name="Logo" type="Sprite2D" parent="Panel/VBoxContainer"]
position = Vector2(273, -198)
scale = Vector2(0.462891, 0.473877)
texture = ExtResource("3_yjgyn")
